--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://package-coder.github.io/cornelia-ecom/front",
+  //"homepage": "https://package-coder.github.io/cornelia-ecom/front",
   "name": "front",
   "version": "0.1.0",
   "private": true,
